# asthetic-clipboard

./: .gitignore  Cargo.toml  LICENSE  README.md  asthetic-clipboard.desktop  build-appimage.sh  install-appimage.sh  install.sh
src/: lib.rs  main.rs  style.css
