[package]
name = "asthetic-clipboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
directories = "6.0.0"
glib = "0.21.5"
gtk4 = { version = "0.10.3", features = ["v4_10"] }
hex = "0.4.3"
image = "0.25.9"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
